--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,6 +28,7 @@
     width: 80vw;
     justify-content: end;
     margin-right: 2rem;
+    margin-bottom: 0!important;
 }
 
 .nav-links {
@@ -38,6 +39,7 @@
 
 .nav-links:hover {
     background-color: #6d76f7;
+    text-decoration: none;
     border-radius: 4px;
     transition: all 0.2s ease-out;
 }
